--- a/web/windows.html
+++ b/web/windows.html
@@ -1,19 +1,36 @@
-<!--
-<?php
-if (!$id) {
-	$id="SKRIPT";
-	echo "<h1>Allgemeine Windowsanleitung</h1>
-	Im folgenden ist SKRIPT der Name eines der Projekte für das jeweilige
-	Vorlesungsskript. Zur Zeit gibt es die folgenden:
-	<ul>";
-    	list_skripte("windows.html");
-        echo "</ul>";
-} else {
-	echo "<h1>Windows-Anleitung für das Skript: $id</h1>
-	<p>(Zur <a href='./windows.html'>allgemeinen Windowsanleitung</a>)</p>";
-}
-?>
--->
+script_id_given = False
+env = __request__.env
+if env.QUERY_STRING:
+    from cgi import parse_qs
+    query_params = parse_qs(env.QUERY_STRING)
+    script_id = query_params.get('id')
+    if script_id:
+        script_id = script_id[0]
+        script_id_given = script_id != ''
+
+if not script_id_given:
+    script_id = 'SKRIPT'
+
+<?xml?>
+<tal:heading condition="not:script_id_given">
+  <h1>Allgemeine Windowsanleitung</h1>
+  <p>
+    Im folgenden ist SKRIPT der Name eines der Projekte für das jeweilige
+    Vorlesungsskript. Zur Zeit gibt es die folgenden:
+  </p>
+  <ul>
+    <li class="navmenu" tal:repeat="item scripts">
+      <a tal:attributes="href string:windows.html?id=${item/id}"
+        tal:content="string:${item/id}" />:
+      <tal:name content="structure string:${item/name}"/>
+      <tal:prof condition="exists:item/prof" content="structure string:, ${item/prof}" />
+    </li>
+  </ul>
+</tal:heading>
+<tal:heading condition="script_id_given">
+  <h1>Windows-Anleitung für das Skript: <tal:id content="string:$script_id"/></h1>
+  <p>(Zur <a href='./windows.html'>allgemeinen Windowsanleitung</a>)</p>
+</tal:heading>
 
 <h2>direkte SVN-Unterstützung im Explorer (geht nicht in der Uni)</h2>
 <ol>
@@ -22,19 +39,13 @@ if (!$id) {
    <li>Die heruntergeladene Datei ausführen</li>
    <li>In den Ordner "Eigene Dateien" gehen und dort die rechte Maustaste
      klicken. "SVN Checkout" wählen und folgende Angaben machen:<br>
-<!--
-     URL: <pre>svn+ssh://FRZ-Login@ppc214.mipool.uni-jena.de/home/stud/md01/joergs/.svnroot/skripte/<?php echo $id; ?></pre>
--->
+     URL: <pre>svn+ssh://FRZ-Login@ppc214.mipool.uni-jena.de/home/stud/md01/joergs/.svnroot/skripte/<tal:id content="string:$script_id"/></pre>
      FRZ-Login ist <b>dein</b> Benutzername im FRZ!
-<!--
-<?php
-   if ($id=="SKRIPT"){
-   	echo "$id aus der obigen Liste auswählen (und in der URL ersetzen),
+     <tal:idwahl condition="not:script_id_given">
+   	<tal:id content="string:$script_id"/> aus der obigen Liste auswählen (und in der URL ersetzen),
    	z.&nbsp;B. für <tt>hecker-parallel</tt>
-   	<pre>svn+ssh://peter3@ppc214.mipool.uni-jena.de/home/stud/md01/joergs/.svnroot/skripte/hecker-parallel</pre>";
-   }
-?>
--->
+   	<pre>svn+ssh://peter3@ppc214.mipool.uni-jena.de/home/stud/md01/joergs/.svnroot/skripte/hecker-parallel</pre>
+     </tal:idwahl>
      Achtung: Du musst Dein Passwort <b>dreimal</b> eingeben. Eine
      wiederholte Abfrage bedeutet also nicht, dass das Passwort falsch war.
    </li>
@@ -43,9 +54,11 @@ if (!$id) {
    <li>Ist alles gut gegangen -> weiter bei 8.</li>
    <li>Wenn es eine Fehlermeldung wegen fehlender Dateien gab und Du nicht
      weißt, wie diese erzeugen sollst, dann hole Dir die Datei
-<!--
-<?php echo "<a href=\"$id-mit-grafiken.tgz\">$id-mit-grafiken.tgz</a>"; ?>
--->
+     <a tal:condition="script_id_given"
+       tal:attributes="href string:${script_id}-mit-grafiken.tgz"
+       tal:content="string:${script_id}-mit-grafiken.tgz" />
+     <tal:grafikdatei tal:condition="not:script_id_given"
+       content="string:${script_id}-mit-grafiken.tgz" />
      und entnehme dieser die fehlenden Dateien. -> weiter bei 5.
    </li>
    <li>fertig</li>
@@ -98,16 +111,12 @@ http://www.chiark.greenend.org.uk/~sgtatham/putty/download.html</a>
    eingeben und dann das Unix-Passwort.</li>
    <li>Du siehst eine Kommandozeile.</li>
    <li>Gebe folgendes ein:
-<!--
-   <pre>svn checkout file:///home/stud/md01/joergs/.svnroot/skripte/<?php echo $id; ?></pre>
-<?php
-   if ($id=="SKRIPT") {
-   	echo "$id aus der obigen Liste auswählen (und statt $id einsetzen),
-   	z.&nbsp;B. für <tt>hecker-parallel</tt>
-   	<pre>file:///home/stud/md01/joergs/.svnroot/skripte/hecker-parallel</pre>";
-   	}
-?>
--->
+   <pre>svn checkout file:///home/stud/md01/joergs/.svnroot/skripte/<tal:id content="string:$script_id"/></pre>
+   <tal:idwahl condition="not:script_id_given">
+     <tal:id content="string:$script_id"/> aus der obigen Liste auswählen (und statt <tal:id content="string:$script_id"/> einsetzen),
+     z.&nbsp;B. für <tt>hecker-parallel</tt>
+     <pre>file:///home/stud/md01/joergs/.svnroot/skripte/hecker-parallel</pre>
+   </tal:idwahl>
    </li>
    <li>Im Texnic-Center solltest du jetzt auf Laufwerk M: (das Laufwerk von
    paxp02f) ein Verzeichnis mit dem Namen des Skripts finden. Darin die
@@ -116,9 +125,11 @@ http://www.chiark.greenend.org.uk/~sgtatham/putty/download.html</a>
    <li>Ist alles gut gegangen -> weiter bei 10.</li>
    <li>Wenn es eine Fehlermeldung wegen fehlender Dateien gab und Du nicht
      weißt, wie diese erzeugen sollst, dann hole Dir die Datei
-<!--
-<?php echo "<a href=\"$id-mit-grafiken.tgz\">$id-mit-grafiken.tgz</a>"; ?>
--->
+     <a tal:condition="script_id_given"
+       tal:attributes="href string:${script_id}-mit-grafiken.tgz"
+       tal:content="string:${script_id}-mit-grafiken.tgz" />
+     <tal:grafikdatei tal:condition="not:script_id_given"
+       content="string:${script_id}-mit-grafiken.tgz" />
      und entnehme dieser die fehlenden Dateien. -> weiter bei 7.
    </li>
    <li>fertig</li>
@@ -127,10 +138,8 @@ http://www.chiark.greenend.org.uk/~sgtatham/putty/download.html</a>
 Du willst deine Kopie auf den neusten Stand brigen?
 <ol><li>Putty starten und wie bei der Installation unter Punkt 2+3+4 verfahren.</li>
    <li>Den Befehl
-<!--
-   <pre>cd <?php echo $id; ?></pre>
-   eingeben. <?php echo $id; ?> ist der Verzeichnisname des Skripts.</li>
--->
+   <pre tal:content="string:cd $script_id" /></pre>
+   eingeben. <tal:id content="string:$script_id"/> ist der Verzeichnisname des Skripts.</li>
    <li>Dann den Befehl
    <pre>svn update eingeben</pre></li></ol>
 
@@ -154,10 +163,8 @@ Du hast Änderungen gemacht und willst diese veröffentlichen?
      + es fehlten die $$ um die P_n</pre></li>
    <li>Putty starten und wie bei der Installation unter Punkt 2+3+4 verfahren.</li>
    <li>Den Befehl
-<!--
-   <pre>cd <?php echo $id; ?></pre>
-   eingeben. <?php echo $id; ?> ist der Verzeichnisname des Skripts.</li>
--->
+   <pre tal:content="string:cd $script_id" /></pre>
+   eingeben. <tal:id content="string:$script_id"/> ist der Verzeichnisname des Skripts.</li>
    <li>Den Befehl
    <pre>svn diff | less</pre>
    eingeben und prüfen, ob deine Änderungen so seien sollen. Mit den
