Bei relativen Bezügen das ./ weglassen
Es ist nicht notwendig, bei relativen Bezügen, das ./ mit anzugeben.

git-svn-id: https://svn.lug-jena.de/uni-skripte@1675 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/web/form.html
+++ b/web/form.html
@@ -76,5 +76,5 @@
   auftreten, als <tt>$Rev$</tt> oder <tt>$Date$</tt>.</li>
 
 <li>Vorlagen für neue Skripte befinden sich im Verzeichnis
-   <a href='./vorlage/'>vorlage</a></li>
+   <a href='vorlage/'>vorlage</a></li>
 </ul>
