--- a/web/skripte.html
+++ b/web/skripte.html
@@ -46,7 +46,7 @@ else:
     <li class="navmenu" tal:repeat="item scripts">
       <tal:name content="structure string:${item/name}" /><!--
       --><tal:prof condition="exists:item/prof" content="structure string:, ${item/prof}" />:
-      <a tal:attributes="href string:./skripte.html?id=${item/id}"
+      <a tal:attributes="href string:skripte.html?id=${item/id}"
         tal:content="structure item/id" />
     </li>
   </ul>
@@ -67,13 +67,13 @@ Eigene Änderungen können mit dem folgenden Befehl auf den Server übertragen w
 <pre>svn commit</pre>
 
 <p tal:condition="not:script_id_given">
-  Die Windowsanleitung ist <a href="./windows.html">hier.</a>
+  Die Windowsanleitung ist <a href="windows.html">hier.</a>
 </p>
 
 <tal:text condition="script_id_given">
   <p>
     Die Windowsanleitung ist
-    <a tal:attributes="href string:./windows.html?${script_id}">hier.</a>
+    <a tal:attributes="href string:windows.html?${script_id}">hier.</a>
   </p>
 
   <h2>Übersetzte Versionen</h2>
