--- a/web/windows.html
+++ b/web/windows.html
@@ -29,7 +29,7 @@ if not script_id_given:
 </tal:heading>
 <tal:heading condition="script_id_given">
   <h1>Windows-Anleitung für das Skript: <tal:id content="string:$script_id"/></h1>
-  <p>(Zur <a href='./windows.html'>allgemeinen Windowsanleitung</a>)</p>
+  <p>(Zur <a href='windows.html'>allgemeinen Windowsanleitung</a>)</p>
 </tal:heading>
 
 <h2>direkte SVN-Unterstützung im Explorer (geht nicht in der Uni)</h2>
