Einrückung und Formatierung vereinheitlichen
git-svn-id: https://svn.lug-jena.de/uni-skripte@1676 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/web/index.html
+++ b/web/index.html
@@ -1,50 +1,60 @@
-<p>Das Projekt
-&bdquo;Vorlesungsskripte der Fakultät für Mathematik und Informatik&ldquo; ist eine Plattform
-von Studierenden für Studierende, um Skripte zu sammeln, zu erstellen, zu
-bearbeiten und natürlich zu verwenden.</p>
+<p>
+  Das Projekt &bdquo;Vorlesungsskripte der Fakultät für Mathematik und
+  Informatik&ldquo; ist eine Plattform von Studierenden für Studierende,
+  um Skripte zu sammeln, zu erstellen, zu bearbeiten und natürlich zu
+  verwenden.
+</p>
 
-<p>Mittlerweile sind schon ein paar Skripte vorhanden.
-Einige sind nur zu Teilen, andere sind vollständig aber
-dafür sind noch Probleme beim Übersetzen. Aber das alles soll auch nur
-ein Anfang sein. Wir hoffen, dass sich weitere Studenten finden, die
-Skripte verbessern, sei es in Bezug auf den Inhalt, Vollständigkeit oder
-den LaTeX-Satz. Leider sind vereinzelt auch noch Fehler versteckt, sowohl
-inhaltliche als auch orthographische.<p>
+<p>
+  Mittlerweile sind schon ein paar Skripte vorhanden. Einige sind nur zu
+  Teilen, andere sind vollständig aber dafür sind noch Probleme beim
+  Übersetzen. Aber das alles soll auch nur ein Anfang sein. Wir hoffen,
+  dass sich weitere Studenten finden, die Skripte verbessern, sei es in
+  Bezug auf den Inhalt, Vollständigkeit oder den LaTeX-Satz. Leider sind
+  vereinzelt auch noch Fehler versteckt, sowohl inhaltliche als auch
+  orthographische.
+<p>
 
-<p>Zum Schreiben der Skripte verwenden wir
-<a href='http://www.latex-project.org/'>LaTeX</a>. Hinweise zur Form und
-eine Vorlage zum Schreiben neuer Skripte findet man unter
-<a href='form.html'>Dokumentation</a>.</p>
+<p>
+  Zum Schreiben der Skripte verwenden wir
+  <a href='http://www.latex-project.org/'>LaTeX</a>. Hinweise zur Form und
+  eine Vorlage zum Schreiben neuer Skripte findet man unter
+  <a href='form.html'>Dokumentation</a>.
+</p>
 
-<p>Es gestaltet sich schwierig,
-&Auml;nderungen von verschiedenen Benutzern von Hand einzupflegen. Für diese
-Aufgabe hat man sogenannte
-<a href='http://de.wikipedia.org/wiki/Versionsverwaltung'>Versions-Managment-Programme</a>
-entwickelt, die sich
-darum kümmern, dass Änderungen zweier Benutzer nicht im Konflikt
-zueinander stehen oder dass alle Benutzer auch die Änderungen der anderen
-Benutzer erhalten. Wir verwenden
-<a href='http://subversion.tigris.org/'>Subversion</a>.</p>
+<p>
+  Es gestaltet sich schwierig, &Auml;nderungen von verschiedenen Benutzern von
+  Hand einzupflegen. Für diese Aufgabe hat man sogenannte
+  <a href='http://de.wikipedia.org/wiki/Versionsverwaltung'>Versions-Managment-Programme</a>
+  entwickelt, die sich darum kümmern, dass Änderungen zweier Benutzer
+  nicht im Konflikt zueinander stehen oder dass alle Benutzer auch die
+  Änderungen der anderen Benutzer erhalten. Wir verwenden
+  <a href='http://subversion.tigris.org/'>Subversion</a>.
+</p>
 
-<p>Diese Programme schützen natürlich nicht vor Sabotage oder davor neue
-Fehler in die Dokumente einzupflegen (es wäre zu schön, wenn ein Programm
-erkennen kann, ob ein Text inhaltlich korrekt ist :). Daher appellieren wir
-an die soziale Kompetenz der Leute! Die Skripte sind alle kostenlos
-und ohne Verpflichtungen verfügbar. Es sollte also keiner einen Grund
-haben, die Skripte absichtlich zu schädigen. Aber denoch eine kleine
-Drohung: Es kann jeder jederzeit nachvollziehen, wer welche Änderungen
-gemacht hat (svn diff oder svn log).</p>
+<p>
+  Diese Programme schützen natürlich nicht vor Sabotage oder davor neue
+  Fehler in die Dokumente einzupflegen (es wäre zu schön, wenn ein
+  Programm erkennen kann, ob ein Text inhaltlich korrekt ist :). Daher
+  appellieren wir an die soziale Kompetenz der Leute! Die Skripte sind
+  alle kostenlos und ohne Verpflichtungen verfügbar. Es sollte also
+  keiner einen Grund haben, die Skripte absichtlich zu schädigen. Aber
+  denoch eine kleine Drohung: Es kann jeder jederzeit nachvollziehen, wer
+  welche Änderungen gemacht hat (svn diff oder svn log).
+</p>
 
-<p>Wie man Subversion verwendet, wird in der
-<a href='svn.html'>Dokumentation</a> erläutert. Dort gibt es auch
-eine Erklärung für
-<a href='windows.html'>Windows</a>.</p>
+<p>
+  Wie man Subversion verwendet, wird in der
+  <a href='svn.html'>Dokumentation</a> erläutert. Dort gibt es auch eine
+  Erklärung für <a href='windows.html'>Windows</a>.
+</p>
 
 <h2>Die Frage nach dem &bdquo;Warum&ldquo;</h2>
 
-<p>Ich (Jörg aka joergs) bekomme immer wiedermal die Frage gestellt, warum ich
-denn meine Mitschrift in LaTeX anfertige und sie dann im Internet
-veröffentliche. Ich will kurz mal einige Gründe nennen:
+<p>
+  Ich (Jörg aka joergs) bekomme immer wiedermal die Frage gestellt, warum
+  ich denn meine Mitschrift in LaTeX anfertige und sie dann im Internet
+  veröffentliche. Ich will kurz mal einige Gründe nennen:
 <ul>
   <li>
     Meine Handschrift ist nicht die Schönste und der Wiedererkennungswert
@@ -59,22 +69,29 @@ veröffentliche. Ich will kurz mal einige Gründe nennen:
     sehen und mich darauf aufmerksam machen.
   </li>
   <li>
-    <p>In meiner Analysis&nbsp;1-Vorlesung arbeitete der Dozent mit
-    vorgefertigten Folien, die er in einem Affentempo über den Projektor zog.
-    Es war ein echter Kampf, da am Ende der Stunde alles abgeschrieben zu
-    haben. In der Vorlesung selbst habe ich von seinen Erläuterungen nichts
-    verstanden, weil ich nur mit Abschreiben beschäftigt war. So ergeht/erging
-    es mir auch in anderen Vorlesungen.</p>
+    <p>
+      In meiner Analysis&nbsp;1-Vorlesung arbeitete der Dozent mit
+      vorgefertigten Folien, die er in einem Affentempo über den
+      Projektor zog. Es war ein echter Kampf, da am Ende der Stunde alles
+      abgeschrieben zu haben. In der Vorlesung selbst habe ich von seinen
+      Erläuterungen nichts verstanden, weil ich nur mit Abschreiben
+      beschäftigt war. So ergeht/erging es mir auch in anderen
+      Vorlesungen.
+    </p>
 
-    <p>Mein Wunsch war immer, eine kooperative Anfertigung einer Mitschrift,
-    so dass sich drei Leute die Mühe machen müssen und alles mitschreiben
-    und alle anderen hören zu und versuchen zu verstehen. Dann tippen die drei
-    Mitschreiber ihre Aufzeichnungen ab und die Zuhörer machen Ergänzungen und
-    Verbesserungen.</p>
+    <p>
+      Mein Wunsch war immer, eine kooperative Anfertigung einer
+      Mitschrift, so dass sich drei Leute die Mühe machen müssen und
+      alles mitschreiben und alle anderen hören zu und versuchen zu
+      verstehen. Dann tippen die drei Mitschreiber ihre Aufzeichnungen ab
+      und die Zuhörer machen Ergänzungen und Verbesserungen.
+    </p>
 
-    <p>Zum Teil funktioniert das auch. Oft schreibe ich die Vorlesung mit und
-    Andere hören zu. Vielleicht klappt es irgendwann auch mal mit dem zweiten
-    Schritt noch.</p>
+    <p>
+      Zum Teil funktioniert das auch. Oft schreibe ich die Vorlesung mit
+      und Andere hören zu. Vielleicht klappt es irgendwann auch mal mit
+      dem zweiten Schritt noch.
+    </p>
   </li>
   <li>
     Dann finde ich, dass sehr viele Informationen in Vorlesungen gegeben
