Umlaute direkt in UTF‐8 eingeben und nicht in HTML
git-svn-id: https://svn.lug-jena.de/uni-skripte@1677 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/web/index.html
+++ b/web/index.html
@@ -23,7 +23,7 @@
 </p>
 
 <p>
-  Es gestaltet sich schwierig, &Auml;nderungen von verschiedenen Benutzern von
+  Es gestaltet sich schwierig, Änderungen von verschiedenen Benutzern von
   Hand einzupflegen. Für diese Aufgabe hat man sogenannte
   <a href='http://de.wikipedia.org/wiki/Versionsverwaltung'>Versions-Managment-Programme</a>
   entwickelt, die sich darum kümmern, dass Änderungen zweier Benutzer
