--- a/web/skripte.html
+++ b/web/skripte.html
@@ -37,7 +37,7 @@ else:
   <h1>Allgemeine Anleitung</h1>
 
   <p>
-    Im Folgenden steht <tal:id content="script_id" /> f&uuml;r den Namen eines
+    Im Folgenden steht <tal:id content="script_id" /> für den Namen eines
     der Projekte für das jeweilige Vorlesungsskript. Zur Zeit gibt es die
     folgenden:
   </p>
