--- a/web/kontakt.html
+++ b/web/kontakt.html
@@ -2,3 +2,23 @@
   Für Fragen, Kommentare, Hinweise oder Vorschläge einfach eine E-Mail an
   <a href='mailto:skripte@listserv.uni-jena.de'>skripte@listserv.uni-jena.de</a>.
 </p>
+
+<p>
+  Diskussionen über die Arbeit an den Skripten werden auf der Mailingliste
+  <a href="mailto:skripte@listserv.uni-jena.de">skripte@listserv.uni-jena.de</a>
+  geführt. Um sich an dieser Mailingliste anzumelden, ist es nötig eine
+  Email mit dem Inhalt "subscribe" (Betreff kann leer sein) an
+  <a href="mailto:skripte-request@listserv.uni-jena.de">skripte-request@listserv.uni-jena.de</a>
+  zu schicken.
+
+  Commits werden auf der Mailinglsite
+  <a href="mailto:skripte-commit@listserv.uni-jena.de">skripte-commit@listserv.uni-jena.de</a>
+  angekündigt. Anmeldung wie oben, aber bei der Adresse
+  <a href="mailto:skripte-commit-request@listserv.uni-jena.de">skripte-commit-request@listserv.uni-jena.de</a>.
+</p>
+
+<p>
+  Ein Archiv der Nachrichten, die bisher über die Liste gegangen sind,
+  befindet sich hier: <a href="http://lc03.rz.uni-jena.de/pipermail/skripte/">
+  <tt>http://lc03.rz.uni-jena.de/pipermail/skripte/</tt></a>
+</p>
