--- a/web/skripte.html
+++ b/web/skripte.html
@@ -114,7 +114,7 @@ Eigene Änderungen können mit dem folgenden Befehl auf den Server übertragen w
   <ul>
     <li tal:content="structure file_link/tgz | default">
       Leider noch keine Quellen verfügbar. Informationen gibt es unter
-      <a href='mailto:skripte@listserv.uni-jena.de'>skripte@listserv.uni-jena.de</a>
+      <a href='mailto:uni-skripte@lug-jena.de'>uni-skripte@lug-jena.de</a>
     </li>
     <li tal:condition="exists:file_link/mgtgz"
       tal:content="structure file_link/mgtgz" />
