--- a/web/mail.html
+++ b/web/mail.html
@@ -5,11 +5,11 @@ if ($id and $body and $knopf == Absenden)
 {
     $id = trim($id);  // remove all newlines and something more that should
                       // not be there to prevent cross site scripting in mails
-    mail("skripte@listserv.uni-jena.de", "Fehler im Skript $id [Webmail]",
+    mail("uni-skripte@lug-jena.de", "Fehler im Skript $id [Webmail]",
          $body);
 
     echo "Die E-Mail wurde an die ".
-      "<a href=\"http://http://lc03.rz.uni-jena.de/pipermail/skripte/\">".
+      "<a href=\"http://wotan.thomas-lotze.de/cgi-bin/mailman/listinfo/uni-skripte\">".
       "Mailingliste</a> gesandt und sollte dort mit etwas Verzögerung zu ".
       "lesen sein. Vielen Dank für die Unterstützung.";
 }
