Die URL für das SVN‐Repository anpassen
Das Repository ist jetzt bei Thomas. Damit haben sich auch die
Zugriffsmethoden, insbesondere die Sache mit dem FRZ‐Login, geändert.

git-svn-id: https://svn.lug-jena.de/uni-skripte@1680 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/web/skripte.html
+++ b/web/skripte.html
@@ -55,10 +55,9 @@ else:
 <p>Für die Kommandozeile: Eine aktuelle Version von SVN selbst ist unter
 <a href="http://subversion.tigris.org/">http://subversion.tigris.org/</a> verfügbar.</p>
 
-Die erste lokale Kopie wird mit folgendem Befehl erstellt
-(<b><tt>FRZ-Login</tt> durch den Unix-Benutzernamen ersetzen!</b>):
+Die erste lokale Kopie wird mit folgendem Befehl erstellt:
 
-<pre>svn checkout svn+ssh://FRZ-Login@ppc214.mipool.uni-jena.de/home/stud/md01/joergs/.svnroot/skripte/<tal:id content="script_id" /></pre>
+<pre>svn checkout http://svn.lug-jena.de/uni-skripte/<tal:id content="script_id" /></pre>
 
 Später wird die lokale Kopie mit folgendem Befehl aktualisiert (in dem lokalen Verzeichnis <tt tal:content="script_id" />):
 <pre>svn update</pre>
