--- a/web/windows.html
+++ b/web/windows.html
@@ -39,15 +39,12 @@ if not script_id_given:
    <li>Die heruntergeladene Datei ausführen</li>
    <li>In den Ordner "Eigene Dateien" gehen und dort die rechte Maustaste
      klicken. "SVN Checkout" wählen und folgende Angaben machen:<br>
-     URL: <pre>svn+ssh://FRZ-Login@ppc214.mipool.uni-jena.de/home/stud/md01/joergs/.svnroot/skripte/<tal:id content="string:$script_id"/></pre>
-     FRZ-Login ist <b>dein</b> Benutzername im FRZ!
+     URL: <pre>http://svn.lug-jena.de/uni-skripte/<tal:id content="string:$script_id"/></pre>
      <tal:idwahl condition="not:script_id_given">
    	<tal:id content="string:$script_id"/> aus der obigen Liste auswählen (und in der URL ersetzen),
    	z.&nbsp;B. für <tt>hecker-parallel</tt>
-   	<pre>svn+ssh://peter3@ppc214.mipool.uni-jena.de/home/stud/md01/joergs/.svnroot/skripte/hecker-parallel</pre>
+   	<pre>http://svn.lug-jena.de/uni-skripte/hecker-parallel</pre>
      </tal:idwahl>
-     Achtung: Du musst Dein Passwort <b>dreimal</b> eingeben. Eine
-     wiederholte Abfrage bedeutet also nicht, dass das Passwort falsch war.
    </li>
    <li><tt>skript.latex</tt> im Texnic-Center öffnen</li>
    <li>LATEX->PDF einstellen und dreimal übersetzen</li>
