Für die Vorlage direkt ins SVN verweisen
Damit sind wir immer aktuell.

git-svn-id: https://svn.lug-jena.de/uni-skripte@1684 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/web/form.html
+++ b/web/form.html
@@ -75,6 +75,8 @@
   unwahrscheinlicher ist, dass diese Zeichenketten in dem Dokument
   auftreten, als <tt>$Rev$</tt> oder <tt>$Date$</tt>.</li>
 
-<li>Vorlagen für neue Skripte befinden sich im Verzeichnis
-   <a href='vorlage/'>vorlage</a></li>
+  <li>Eine Vorlage für ein neues Skript befindet sich im
+    <a href="http://svn.lug-jena.de/uni-skripte/vorlage/">SVN‐Verzeichnis
+    vorlage</a>.
+  </li>
 </ul>
