UTF‐8‐Dekodierungsfehler in den Changelog‐Dateien abfangen
In einigen Dateien wurde noch Latin1 als Kodierung verwendet, was zu
einem Fehler und damit zu einem Backtrace auf der Webseite führte. Falls
der Dateiinhalt nicht in UTF‐8‐Kodierung darstellbar ist, dann einfach
Latin1 verwenden.

git-svn-id: https://svn.lug-jena.de/uni-skripte@1685 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/web/skripte.html
+++ b/web/skripte.html
@@ -16,7 +16,11 @@ if script_id_given:
     exists_file = lambda type: os.path.exists( filename(type) )
 
     if exists_file('.Changelog'):
-        changelog = open( filename('.Changelog') ).read().decode("UTF-8")
+        changelog = open( filename('.Changelog') ).read()
+        try:
+            changelog = changelog.decode("UTF-8")
+        except UnicodeDecodeError:
+            changelog = changelog.decode("latin1")
 
     file_link_template = lambda type: '<a href="%s%s">%s%s</a>' % \
       (script_id, type, script_id, type)
