In TALES‐Ausdruck Operation mit : trennen
Der not‐Ausdruck muss mit einem Doppelpunkt abgetrennt werden.
http://www.zope.org/Documentation/Books/ZopeBook/2_6Edition/AppendixC.stx#3-141

git-svn-id: https://svn.lug-jena.de/uni-skripte@1731 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/web/status.html
+++ b/web/status.html
@@ -36,7 +36,7 @@ def stats(script_id):
           tal:repeat="entry python:stats(item[0])"
           tal:content="entry"
           tal:attributes="class python:entry and 'bad' or 'good'"/>
-      <td tal:condition="not python:exists(item[0])"
+      <td tal:condition="not:python:exists(item[0])"
           colspan="6" class="bad_stat">Kein Log vorhanden</td>
     </tr>
   </tbody>
