Die CSS‐Klassen für die Tabelleneinträge enden auf _stat
git-svn-id: https://svn.lug-jena.de/uni-skripte@1734 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/web/status.html
+++ b/web/status.html
@@ -40,7 +40,8 @@ for script in scripts:
       <td tal:condition="item/data"
           tal:repeat="entry item/data"
           tal:content="entry"
-          tal:attributes="class python:entry == '0' and 'good' or 'bad'"/>
+          tal:attributes="class python:entry == '0' and 'good_stat' or
+            'bad_stat'"/>
       <td tal:condition="not:item/data"
           colspan="6" class="bad_stat">Kein Log vorhanden</td>
     </tr>
