In der ersten Tabellenspalte einen Link auf die Logdatei setzen
Es ist ganz nützlich direkt in die Datei mit den Ausgaben zu schauen.
Daher soll in der ersten Spalte ein Link stehen.

git-svn-id: https://svn.lug-jena.de/uni-skripte@1735 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/web/status.html
+++ b/web/status.html
@@ -36,7 +36,11 @@ for script in scripts:
   </thead>
   <tbody>
     <tr tal:repeat="item all_results">
-      <td tal:content="item/name" />
+      <td>
+        <a tal:omit-tag="not:item/data" 
+          tal:attributes="href string:${item/name}.Build.log"
+          tal:content="item/name" />
+      </td>
       <td tal:condition="item/data"
           tal:repeat="entry item/data"
           tal:content="entry"
