Reihenfolge in der Auflistung tauschen: „Kennung: Name, Prof“
Die Reihenfolge erscheint sinnvoller, wenn die Kennung vorn steht.
Außerdem passt das besser zum Text, da auf die Kennung Bezug genommen
wird.

Weiterhin nur den Namen ausgeben, wenn er sich von der Kennung
unterscheidet. Bei neuen Skripten, für die nicht alle Einträge in
available_scripts nicht vorhanden sind, wird Name=Kennung in __init__
gesetzt. Aber hier ist eine Doppeltnennung unpassend.

git-svn-id: https://svn.lug-jena.de/uni-skripte@1738 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/web/skripte.html
+++ b/web/skripte.html
@@ -48,10 +48,12 @@ else:
 
   <ul>
     <li class="navmenu" tal:repeat="item scripts">
-      <tal:name content="structure string:${item/name}" /><!--
-      --><tal:prof condition="exists:item/prof" content="structure string:, ${item/prof}" />:
       <a tal:attributes="href string:skripte.html?id=${item/id}"
-        tal:content="structure item/id" />
+        tal:content="structure item/id" /><!--
+      --><tal:name condition="python:item['name'] != item['id']"
+        content="structure string:: ${item/name}" /><!--
+      --><tal:prof condition="exists:item/prof"
+        content="structure string:, ${item/prof}" />
     </li>
   </ul>
 </tal:heading>
