Für Tarball direkt ins SVN verweisen; Link zum SVN hinzufügen
Um wirklich immer den aktuellen Tarball zu haben, sollten wir einfach ins
SVN verweisen. ViewCVS kann die Tarballs on‐the‐fly ausliefern. Einfacher
geht's nicht.

Zusätzlich noch einen Verweis auf den Zweig im SVN mit angeben.

git-svn-id: https://svn.lug-jena.de/uni-skripte@1739 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/web/skripte.html
+++ b/web/skripte.html
@@ -26,7 +26,7 @@ if script_id_given:
       (script_id, type, script_id, type)
 
     file_link = dict()
-    for i in ['ps', 'pdf', 'tgz']:
+    for i in ['ps', 'pdf']:
         if exists_file('.' + i):
             file_link[i] = file_link_template('.' + i)
 
@@ -117,9 +117,13 @@ Eigene Änderungen können mit dem folgenden Befehl auf den Server übertragen w
 
   <h2>Die aktuellen Quellen</h2>
   <ul>
-    <li tal:content="structure file_link/tgz | default">
-      Leider noch keine Quellen verfügbar. Informationen gibt es unter
-      <a href='mailto:uni-skripte@lug-jena.de'>uni-skripte@lug-jena.de</a>
+    <li>
+      <a tal:attributes="href string:http://svn.lug-jena.de/uni-skripte/${script_id}.tar.gz?view=tar"
+        >Tarball direkt aus dem SVN</a>
+    </li>
+    <li>
+      <a tal:attributes="href string:http://svn.lug-jena.de/uni-skripte/${script_id}/"
+        >SVN‐Eintrag</a>
     </li>
     <li tal:condition="exists:file_link/mgtgz"
       tal:content="structure file_link/mgtgz" />
