Am Ende des Changelog‐Eintrags den Zeilenumbruch entfernen
Dieser Zeilenumbruch ist in Dateien und bei der Ausgabe von svnlook
notwendig, aber hier passt er nicht so richtig.

git-svn-id: https://svn.lug-jena.de/uni-skripte@1740 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/web/skripte.html
+++ b/web/skripte.html
@@ -16,7 +16,7 @@ if script_id_given:
     exists_file = lambda type: os.path.exists( filename(type) )
 
     if exists_file('.Changelog'):
-        changelog = open( filename('.Changelog') ).read()
+        changelog = open( filename('.Changelog') ).read().strip()
         try:
             changelog = changelog.decode("UTF-8")
         except UnicodeDecodeError:
