Für eine vollständige Liste der Änderungen aufs SVN verweisen
git-svn-id: https://svn.lug-jena.de/uni-skripte@1741 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/web/skripte.html
+++ b/web/skripte.html
@@ -133,8 +133,12 @@ Eigene Änderungen können mit dem folgenden Befehl auf den Server übertragen w
   und wenn es nur ist, die Fehler darin zu suchen oder Vorschläge zu
   machen &ndash;&nbsp;damit ist auch viel geholfen!</p>
 
-  <tal:changelog condition="exists:changelog">
   <h2>Letzte Änderungen</h2>
-  <pre tal:content="changelog" />
-  </tal:changelog>
+  <pre tal:condition="exists:changelog" tal:content="changelog" />
+  <p>
+    Eine
+    <a tal:attributes="href string:http://svn.lug-jena.de/uni-skripte/${script_id}/"
+      >Liste mit allen Änderungen</a> kann im SVN für die jeweiligen
+    Dateien eingesehen werden.
+  </p>
 </tal:text>
