Für den Checkout die https‐Adresse verwenden
Für den Zugriff mit SVN auf das Repository muss WebDAV verwendet werden
und dieses ist über das https‐Protokoll (nicht http) zu erreichen.

git-svn-id: https://svn.lug-jena.de/uni-skripte@1742 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/web/skripte.html
+++ b/web/skripte.html
@@ -63,7 +63,7 @@ else:
 
 Die erste lokale Kopie wird mit folgendem Befehl erstellt:
 
-<pre>svn checkout http://svn.lug-jena.de/uni-skripte/<tal:id content="script_id" /></pre>
+<pre>svn checkout https://svn.lug-jena.de/uni-skripte/<tal:id content="script_id" /></pre>
 
 Später wird die lokale Kopie mit folgendem Befehl aktualisiert (in dem lokalen Verzeichnis <tt tal:content="script_id" />):
 <pre>svn update</pre>
