--- a/web/windows.html
+++ b/web/windows.html
@@ -39,11 +39,11 @@ if not script_id_given:
    <li>Die heruntergeladene Datei ausführen</li>
    <li>In den Ordner "Eigene Dateien" gehen und dort die rechte Maustaste
      klicken. "SVN Checkout" wählen und folgende Angaben machen:<br>
-     URL: <pre>http://svn.lug-jena.de/uni-skripte/<tal:id content="string:$script_id"/></pre>
+     URL: <pre>https://svn.lug-jena.de/uni-skripte/<tal:id content="string:$script_id"/></pre>
      <tal:idwahl condition="not:script_id_given">
    	<tal:id content="string:$script_id"/> aus der obigen Liste auswählen (und in der URL ersetzen),
    	z.&nbsp;B. für <tt>hecker-parallel</tt>
-   	<pre>http://svn.lug-jena.de/uni-skripte/hecker-parallel</pre>
+       <pre>https://svn.lug-jena.de/uni-skripte/hecker-parallel</pre>
      </tal:idwahl>
    </li>
    <li><tt>skript.latex</tt> im Texnic-Center öffnen</li>
