Auf die Vorlage im SVN verweisen
Es gibt nicht mehr das Unterverzeichnis vorlage und über die
SVN‐Schnittstelle ist immer die aktuelle Version erreichbar.

git-svn-id: https://svn.lug-jena.de/uni-skripte@1743 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/web/form.html
+++ b/web/form.html
@@ -59,13 +59,15 @@
 <li>Jedes Dokument <b>muss</b> eine Erklärung über die Verwendbarkeit des
   Dokuments (Lizenz) und Möglichkeiten zur Kontaktaufnahme beinhalten. Als
   Vorlage dafür kann das Vorwort aus dem
-  <a href="vorlage/skript.latex">Beispielskript</a> verwendet werden.</li>
+  <a href="http://svn.lug-jena.de/uni-skripte/vorlage/skript.latex?view=markup">Beispielskript</a>
+  verwendet werden.</li>
 
 <li>Da regelmäßg Ausgaben der Dokumente erstellt werden, sollte an einer
   Stelle im Dokument die Version des Dokuments (<tt>$LastChangedRevision$</tt>)
   und das Datum (<tt>$LastChangedDate$</tt>) der letzten Änderung verwerkt
   werden. Dies ist zum Beispiel im Vorwort des
-  <a href="vorlage/skript.latex">Beispielskripts</a> umgesetzt. Dafür hat sich
+  <a href="http://svn.lug-jena.de/uni-skripte/vorlage/skript.latex?view=markup">Beispielskripts</a>
+  umgesetzt. Dafür hat sich
   das Paket <tt>svn</tt> als praktisch erwiesen. Zusätzlich muss mit svn die
   Ersetzung der Schlüsselwörter aktiviert werden:
 
