--- a/web/form.html
+++ b/web/form.html
@@ -59,19 +59,19 @@
 <li>Jedes Dokument <b>muss</b> eine Erklärung über die Verwendbarkeit des
   Dokuments (Lizenz) und Möglichkeiten zur Kontaktaufnahme beinhalten. Als
   Vorlage dafür kann das Vorwort aus dem
-  <a href="http://svn.lug-jena.de/uni-skripte/vorlage/skript.latex?view=markup">Beispielskript</a>
+  <a href="http://svn.lug-jena.de/uni-skripte/vorlage/skript.ltx?view=markup">Beispielskript</a>
   verwendet werden.</li>
 
 <li>Da regelmäßg Ausgaben der Dokumente erstellt werden, sollte an einer
   Stelle im Dokument die Version des Dokuments (<tt>$LastChangedRevision$</tt>)
   und das Datum (<tt>$LastChangedDate$</tt>) der letzten Änderung verwerkt
   werden. Dies ist zum Beispiel im Vorwort des
-  <a href="http://svn.lug-jena.de/uni-skripte/vorlage/skript.latex?view=markup">Beispielskripts</a>
+  <a href="http://svn.lug-jena.de/uni-skripte/vorlage/skript.ltx?view=markup">Beispielskripts</a>
   umgesetzt. Dafür hat sich
   das Paket <tt>svn</tt> als praktisch erwiesen. Zusätzlich muss mit svn die
   Ersetzung der Schlüsselwörter aktiviert werden:
 
-  <pre>svn propset svn:keywords "LastChangedRevision LastChangedDate" skript.latex</pre></li>
+  <pre>svn propset svn:keywords "LastChangedRevision LastChangedDate" skript.ltx</pre></li>
 
 <li>Es sollten nur die langen Formen der Keywords verwendet werden, da es
   unwahrscheinlicher ist, dass diese Zeichenketten in dem Dokument
