< durch &lt; ersetzen
git-svn-id: https://svn.lug-jena.de/uni-skripte@1745 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/web/form.html
+++ b/web/form.html
@@ -54,7 +54,7 @@
 
   ACHTUNG: Zur Erstellung von combined pdf/latex Bildern bitte auf die Version
   achten. Es hat sich ergeben, daß die pdf-Anteile der Bilder um 90° verdreht
-  werden, wenn man mit xfig-Version < 3.2.5 arbeitet.</li>
+  werden, wenn man mit xfig-Version &lt; 3.2.5 arbeitet.</li>
 
 <li>Jedes Dokument <b>muss</b> eine Erklärung über die Verwendbarkeit des
   Dokuments (Lizenz) und Möglichkeiten zur Kontaktaufnahme beinhalten. Als
