Umstellung auf Ophelia
Mit Ophelia ist die Mailversenderei nicht so kuschelig und kurz wie mit
PHP, aber dafür wesentlich realitätsnäher und flexibler. So konnte (bzw.
musste) ich auch das Problem der nicht kodierten Umlaute im Body beheben.
Jetzt sehen also die Mails auch schön aus.

Ich habe mich für quoted‐printable als Encoding für den Body entschieden,
weil ich die Mailingliste mit listadmin moderiere und der dekodiert
base64 nicht, so dass ich nicht erkennen kann, was in der E‐Mail steht.
Bei quoted‐printable fehlen nur einige Zeichen, aber man kann erkennen,
ob es echt ist oder Spam.

Die Prüfung, welcher Knopf gedrückt wurde, habe ich weggelassen, da ich
die Spielerei mit mehreren Knöpfen von der Webseite entfernt habe.

git-svn-id: https://svn.lug-jena.de/uni-skripte@1747 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/web/mail.html
+++ b/web/mail.html
@@ -1,21 +1,59 @@
-<!--
-<?php
-// echo "<b>id=-$id- body=-$body- knopf=$knopf $HTTP_REFERER</b><br>";
-if ($id and $body and $knopf == Absenden)
-{
-    $id = trim($id);  // remove all newlines and something more that should
-                      // not be there to prevent cross site scripting in mails
-    mail("uni-skripte@lug-jena.de", "Fehler im Skript $id [Webmail]",
-         $body);
+mail_to = 'uni-skripte@lug-jena.de'
+mail_from = 'uni-skripte@lug-jena.de'
 
-    echo "Die E-Mail wurde an die ".
-      "<a href=\"http://wotan.thomas-lotze.de/cgi-bin/mailman/listinfo/uni-skripte\">".
-      "Mailingliste</a> gesandt und sollte dort mit etwas Verzögerung zu ".
-      "lesen sein. Vielen Dank für die Unterstützung.";
-}
-else
-  echo "Es gab Probleme beim Versand. Bitte wende Dich per E-Mail an die ".
-      "Mailingliste.";
-?>
--->
+from cgi import parse
+query_params = parse(__request__.env.apache_request, __request__.env)
 
+script_id = query_params.get('id')
+if script_id:
+    script_id = script_id[0]
+
+body = query_params.get('body')
+if body:
+    body = body[0]
+
+email_send = False
+if body and body != '' and script_id and script_id != '':
+    from email import Message, Charset
+    mail = Message.Message()
+    mail['To'] = mail_to
+    mail['From'] = mail_from
+    mail['Subject'] = 'Fehler im Skript %s [Webmail]' % script_id
+    mail.set_payload(body)
+    for char_set in ['UTF-8', 'latin1']:
+        try:
+            body = body.decode(char_set)
+            cs = Charset.Charset(char_set)
+            cs.body_encoding = Charset.QP
+            mail.set_charset(cs)
+            break
+        except UnicodeDecodeError:
+            None
+
+    mail = mail.as_string()
+
+    import os
+    pipe = os.popen("/usr/sbin/sendmail -f '%s' '%s'" %
+                    (mail_from, mail_to), "w")
+    pipe.write(mail)
+    pipe.close()
+    email_send = True
+
+<?xml?>
+<tal:verbose condition="nothing | default">
+  E-Mail: <pre tal:condition="exists:mail" tal:content="mail" />
+  Id: <pre tal:content="script_id" />
+  body: <pre tal:content="body" />
+  email_send: <pre tal:content="email_send" />
+</tal:verbose>
+
+<tal:send condition="email_send">
+  Die E-Mail wurde an die
+  <a href="http://wotan.thomas-lotze.de/cgi-bin/mailman/listinfo/uni-skripte"
+    >Mailingliste</a> gesandt und sollte dort mit etwas Verzögerung zu lesen
+  sein. Vielen Dank für die Unterstützung.
+</tal:send>
+<tal:notsend condition="not:email_send">
+  Es gab Probleme beim Versand. Bitte wende Dich per E-Mail an die Mailingliste
+  <a href="mailto:uni-skripte@lug-jena.de">uni-skripte@lug-jena.de</a>.
+</tal:notsend>
