Anrede mit Sie, statt Du
Ich finde die Anrede mit Sie besser.

git-svn-id: https://svn.lug-jena.de/uni-skripte@1748 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/web/mail.html
+++ b/web/mail.html
@@ -54,6 +54,7 @@ if body and body != '' and script_id and script_id != '':
   sein. Vielen Dank für die Unterstützung.
 </tal:send>
 <tal:notsend condition="not:email_send">
-  Es gab Probleme beim Versand. Bitte wende Dich per E-Mail an die Mailingliste
+  Es gab Probleme beim Versand. Bitte wenden Sie sich per E-Mail an die
+  Mailingliste
   <a href="mailto:uni-skripte@lug-jena.de">uni-skripte@lug-jena.de</a>.
 </tal:notsend>
