results mit [0, 0, '?', …] initialisieren
Wenn die Zeile „I: Zusammenfassung“ nicht existiert (z.B. wegen einer
kaputten Logdatei), sollen Fragezeichen ausgegeben werden, um dies zu
verdeutlichen.

git-svn-id: https://svn.lug-jena.de/uni-skripte@1780 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/web/status.html
+++ b/web/status.html
@@ -7,7 +7,7 @@ all_results = []
 for script in scripts:
     script_id = script['id']
     if os.path.exists( filename(script_id) ):
-        result = [0] * 6
+        result = [0,0] + ['?'] * 4
         for line in open( filename(script_id) ):
             if line.startswith('F:'):
                 result[0] += 1
