--- a/web/form.html
+++ b/web/form.html
@@ -62,7 +62,7 @@
   <a href="http://svn.lug-jena.de/uni-skripte/vorlage/skript.ltx?view=markup">Beispielskript</a>
   verwendet werden.</li>
 
-<li>Da regelmäßg Ausgaben der Dokumente erstellt werden, sollte an einer
+<li>Da regelmäßig Ausgaben der Dokumente erstellt werden, sollte an einer
   Stelle im Dokument die Version des Dokuments (<tt>$LastChangedRevision$</tt>)
   und das Datum (<tt>$LastChangedDate$</tt>) der letzten Änderung verwerkt
   werden. Dies ist zum Beispiel im Vorwort des
