Die CLT2010‐Vortragsunterlagen einbinden
Der Text soll möglichst groß sein, damit er auch auffällt. Der Rest auf
der Seite ist eh nur Blabla.

git-svn-id: https://svn.lug-jena.de/uni-skripte@2793 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/web/index.html
+++ b/web/index.html
@@ -1,3 +1,14 @@
+<p style="font-size:130%;">
+  Unterlagen für den <a
+  href="http://chemnitzer.linux-tage.de/2010/vortraege/detail.html?idx=491">Vortrag</a>
+  bei den <a href="http://chemnitzer.linux-tage.de/2010/">Chemnitzer
+  Linuxtagen&nbsp;2010</a>:
+</p>
+<ul style="font-size:150%;">
+  <li><a href="clt2010-vortrag.pdf">Folien</a></li>
+  <li><a href="clt2010-vortrag.ltx">Quellen</a></li>
+</ul>
+
 <p>
   Das Projekt &bdquo;Vorlesungsskripte der Fakultät für Mathematik und
   Informatik&ldquo; ist eine Plattform von Studierenden für Studierende,
